Bug 415990 - the application assumes the class element is a folder type
Summary: the application assumes the class element is a folder type
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.30.0 (KDE Applications 19.12.0)
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-08 07:26 UTC by Hamid Sahraiee
Modified: 2020-03-02 07:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.30.80 (KDE releases 20.03.80)
Sentry Crash Report:


Attachments
try to delete the BodyPart class in the SahraCore/Alive/. (31.02 KB, text/xml)
2020-01-08 07:26 UTC, Hamid Sahraiee
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hamid Sahraiee 2020-01-08 07:26:41 UTC
Created attachment 124965 [details]
try to delete the BodyPart class in the SahraCore/Alive/.

SUMMARY
when I want to delete a class element in the project, This message appear:
"The folder must be emptied before it can be deleted"
the application assumes the class element is a folder type.


STEPS TO REPRODUCE
I attach the project file.

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ralf Habacker 2020-01-08 09:55:46 UTC
Git commit 759b1cc5baa11007fd8ad2ea632dd49bf8b16d27 by Ralf Habacker.
Committed on 08/01/2020 at 09:50.
Pushed by habacker into branch 'master'.

Fix 'the application assumes the class element is a folder type'
FIXED-IN:2.30.80 (KDE Applications 19.03.80)

M  +16   -4    umbrello/umllistview.cpp

https://invent.kde.org/kde/umbrello/commit/759b1cc5baa11007fd8ad2ea632dd49bf8b16d27
Comment 2 Ralf Habacker 2020-01-08 10:02:25 UTC
Thanks for reporting. The issue will be fixed in the next minor release 2.31, which will be available in April 2020.
Comment 3 Hamid Sahraiee 2020-01-08 17:14:24 UTC
thanks a lot ;)