Fix 'the application assumes the class element is a folder type'

BUG:415990
FIXED-IN:2.30.80 (KDE Applications 19.03.80)